[To Do App] edit and delete items menu overflow fixed

--- a/todo-app/styles.css
+++ b/todo-app/styles.css
@@ -35,7 +35,6 @@ h1 {
     gap: 15px;
     box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.19), 0px 6px 6px rgba(0, 0, 0, 0.23);
     font-family: 'Itim', cursive;
-    overflow-y: auto;
 }
 
 .to-do-header {
